@@ -1,9 +1,5 @@
-DIST aufs-utils-0.1_pre20070903.tar.gz 198455 RMD160 55912ac9f4ab3b0cfc02894565dbf5b460e73744 SHA1 e569f53aa675fc62c1bf9bf2745024b6c8c497a0 SHA256 4921f0e7ddbd96086e81f2c418c3657d3bbf7c503f274abf95e48d05aeb0a103
-DIST aufs-utils-0.1_pre20070910.tar.gz 24341 RMD160 b5359af959e34f6c773121df8169433f69256518 SHA1 26bd7400d451c17e0d07af7694269dcf1d5ff2f4 SHA256 b8a4950fd5c5e947164c74c95ef5961805923061d2fadf9a8d56326d67a8becd
 DIST aufs-utils-0.1_pre20070917.tar.gz 25011 RMD160 f9f8c22b1d266c252de174e38c647d1941436767 SHA1 ad779d1b99087e2db284893461849c41e6ba1dd7 SHA256 96e824d4c2178235da998f2731bc0f5918a504dc8d4b5db61ca7231ef628fe48
-EBUILD aufs-utils-0.1_pre20070903.ebuild 582 RMD160 030bb912688b4a393a97547d2260d53368452927 SHA1 4d98157455589b86fa90c708a18bb225c4b61c25 SHA256 e71f5fea0c47d8a39506cfa8c5073f2ed59cfd32ebb6290f959794f17c7090c0
-EBUILD aufs-utils-0.1_pre20070910.ebuild 582 RMD160 030bb912688b4a393a97547d2260d53368452927 SHA1 4d98157455589b86fa90c708a18bb225c4b61c25 SHA256 e71f5fea0c47d8a39506cfa8c5073f2ed59cfd32ebb6290f959794f17c7090c0
 EBUILD aufs-utils-0.1_pre20070917.ebuild 588 RMD160 fff771d7d884ead31ffad1dc9fb7b9ad72f21677 SHA1 cb251582d0171cdd8e3a7708e21294e50c4b3ea4 SHA256 7832a100f09891805709ae484a2293074d642f7ff94b58a022c334e188f10583
 EBUILD aufs-utils-9999.ebuild 598 RMD160 1d6ac3cb536262c9094e6a829ebafcf192b84c46 SHA1 0b2cc14bccaa5180018c3b3889b1322060177c1e SHA256 ceb8b308f6da0862b24fbd7afed58ba70d9ef9bcdf3de72591a9a67763e48d3f
-MISC ChangeLog 683 RMD160 6bdc78dc0442e9621a4ddb7a4831920b313fc7aa SHA1 0c4f9c6d2088e90618623eef39cf60eb53ccd692 SHA256 9b17fafbe996996a2d3f1bbd5b090f2aa1db95a1d6cd9d15b545ad4a4f68a25d
+MISC ChangeLog 818 RMD160 d9e638894e727f120a7fba3221e259080711db10 SHA1 7f2377c677b52873e88380e491fdd03c1891ba89 SHA256 e804fd6fcdd46622dcb2c26af49dd09bb1b549206cb2bcd628911f9387808224
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
