@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Oct 2007; Markus Ullmann <jokey@gentoo.org>
+  -aufs-utils-0.1_pre20070903.ebuild, -aufs-utils-0.1_pre20070910.ebuild:
+  Drop old
+
   19 Sep 2007; Russell Harmon (eatnumber1) <eatnumber1@gmail.com>
   +aufs-utils-0.1_pre20070910.ebuild, +aufs-utils-0.1_pre20070917.ebuild:
   Version bump
